feat(missa): implement workflow and assignment management
Add dedicated Missa API models, lifecycle use cases, and liturgical assignment operations.

Coordinate confirmed common Presence atomically and enforce assignment-removal dependencies.

Register RBAC, activity, OpenAPI, and V26 persistence contracts.